# lsb-steganography

./: CMakeLists.txt  LICENSE.md  README.md
src/: main.cpp
src/cli/: argParser.cpp  argParser.h
src/images/: image.cpp  image.h  imageLoader.cpp  imageLoader.h
src/images/types/: bmpImage.cpp  bmpImage.h
src/steganalysis/: steganalyzer.h
src/steganalysis/types/: chi2analyzer.cpp  chi2analyzer.h  rsAnalyzer.cpp  rsAnalyzer.h
src/steganography/: messenger.cpp  messenger.h  steganographer.cpp  steganographer.h
tests/: sharedTestData.h
tests/images/: imageLoaderTest.cpp
tests/images/types/: bmpImageTest.cpp
tests/steganography/: messengerTest.cpp  steganographerTest.cpp
